--- a/Portfolio project/CSS/protifolio.css
+++ b/Portfolio project/CSS/protifolio.css
@@ -1,10 +1,10 @@
 body{
-    background-color:grey;
+    background-color:rgb(37, 58, 37);
     width: 100%;
     height: 100%;
     align-content: center;
     margin: 0;
-  font-family: Arial;
+    font-family: Arial;
 }
 
 #Header{
